# board-app

./: .dockerignore  .env.local  Cargo.toml  Dockerfile  Dockerfile.rmq  README.md  Rocket.toml  docker-compose.yaml  endpoints.md
metrics/prometheus/: Dockerfile  prometheus.yml
migrations/: board-app.sql.schema_2024-12-21T11_37_09.451Z.ddb  board-app.sql.schema_2024-12-21T11_37_09.451Z.md
migrations/2024-08-28-173611_create_users/: up.sql
migrations/2024-09-04-165122_files/: up.sql
migrations/2024-09-09-180404_public_private_files/: down.sql
migrations/2024-11-08-190729_user_profiles/: down.sql  up.sql
migrations/2024-11-13-140524_introducing_boards/: down.sql  up.sql
migrations/2024-11-23-115504_cards_name/: down.sql  up.sql
migrations/2025-01-26-150610_friends_system/: down.sql  up.sql
migrations/2025-01-30-133051_friend_codes/: down.sql  up.sql
migrations/2025-02-05-084009_chat_messages/: down.sql  up.sql
src/: config.rs  jwt.rs  main.rs  schema.rs  secret.key
src/catchers/: catchers.rs  mount_catchers.rs
src/database/: file_queries.rs  mod.rs  user_queries.rs
src/errors/: mod.rs
src/models/: api_response.rs  auth.rs  file.rs  friends.rs  messages.rs  mod.rs  rmq_stream.rs  user.rs  ws_state.rs
src/routes/: mod.rs  mount_routes.rs  routes.rs
src/routes/auth_routes/: mod.rs
src/routes/board_routes/: base_actions.rs  card_actions.rs  card_editing.rs  collaborator_actions.rs  mod.rs  (+1 more)
www/: .eslintrc.json  Dockerfile  next.config.ts  package-lock.json  package.json  vite.config.ts
www/src/: App.css  App.tsx  store.ts  types.ts
(+80 files in other folders)
