[package]
name = "web-app"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.16.0"
chrono = {version = "0.4.26", features = ["serde"] }
diesel = { version = "2.2.3", features = ["postgres", "uuid", "chrono"] }
diesel_migrations = "2.2.0"
dotenv = "0.15.0"
jwt = { package = "jsonwebtoken", version = "9.3.0"}
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.4", features = ["diesel_postgres_pool"] }
serde = "1.0.209"
serde_json = "1.0.127"
uuid = {version = "1.10.0", features = ["v4", "serde"] }
